2004-01-13 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* device/include/z180.h,
	* device/lib/_memcpy.c,
	* device/lib/_memmove.c,
	* device/lib/_mulint.c,
	* device/lib/ser_ir.c,
	* device/lib/ser_ir_cts_rts.c,
	* device/lib/_strcmp.c,
	* device/lib/_strtok.c: fixed pragmas to non-deprecated form
	* src/z80/main.c (_process_pragma): add support for pragmas bank and
	portmode; added deprecation warning for bank= and protmode= forms.
	Also, guard against buffer overflow.
	* src/z80/gen.c (aopGet): generate better code for sfr banked read

2004-01-13 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/hc08/main.c (_hc08_genAssemblerPreamble): fixed bug #875487. Also
	changed interrupt vector table generation to only emit declared vectors.
	* device/include/Makefile.in: added missing backslash
	* device/lib/pic16/Makefile.rules: add $(MODELFLAGS) to $(CFLAGS)

2004-01-13 Vangelis Rokas <vrokas@otenet.gr>

	Mainly changes to support compilation of the device libraries
	* src/pic16/device.c: stack is allocated via symbol and not
	via literal number. The symbol is placed in the corresponding
	position of the data ram
	* (pic16_dump_section): relocatable and absolute uninitialized
	data are now emitted in sorted order to reduce section naming,
	* src/pic16/ralloc.c (newReg): fixed bug with SFR's that
	weren't marked as being in the access bank,

2004-01-13 Vangelis Rokas <vrokas@otenet.gr>

	Added portion of GNU PIC Library under the directory
	device/include/pic16 and device/lib/pic16. These files
	contain the declarations of SFRs for the PIC18Fxx2 devices.
	The directory is initialized via configure from toplevel.
	
2004-01-12 Klaus Flittner <klaus_flittner@gmx.de>

	* src/ds390/gen.c (operandsEqu): fixed a little typo, that prevented
	the spilllocations to be compared correctly

2004-01-12 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCast.c (decorateType): fixed bug introduced today

2004-01-12  Borut Razem <borut.razem@siol.net>
